--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+ 
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
@@ -9,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/page1.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/page2.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/form1.css">
