--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- 
+
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/page2.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/form1.css">
+    <script src="js/bootstrap.min.js">
+    <script src="js/bootstrap.js">
     <link rel="icon" href="images/me.jpg" type="image/jpg">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     
