--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-
+ 
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
     <title>Atul Singh</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width:device-width initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/page1.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/page2.css">
@@ -16,8 +13,9 @@
     <link rel="stylesheet" href="css/form1.css">
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery-1.11.3.min.js"></script>
     <link rel="icon" href="images/me.jpg" type="image/jpg">
-    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     
     <script>
         $(document).ready(function() {
